# cv_training

./: 10.1_question.txt  9.24_question.cpp  9.24_question.txt  9.27  9.27 night  9.28 noon finished  README.md  RoboMaster Assignment1  a1.cpp  assignment1.cpp  assignment1_without_using_object.cpp  assignment2(1)check_openCV_version.cpp  assignment2(2)imageProcessing.cpp  assignment2(3)_redo.cpp  assignment2(3)edge_detection.cpp  assignment2.cpp  assignment9_24.cpp  assignment9_24_new.cpp  binaryimage.cpp  copyimage.cpp  cv_a1.cpp  cv_assignment1.cpp  dialate.cpp  displayimage.cpp  drawcontours.cpp  forvideo.cpp  gamma.cpp  input_sample1  main.cpp  my_rect_dete.py  rec.cpp  rec.h  rectangleContours.cpp  robo_assignment1.py  training  try.py  version
assignment_1/: 9.24_question.txt  Hu Zhenwei.py  main.cpp
assignment_2/: main  main.cpp
assignment_3/: CMakeLists.txt
assignment_3/include/: .armorfind.h.swn  .armorfind.h.swo  .armorfind.h.swp  armorfind.h  imageProcess.h
assignment_3/src/: .armorfind.cpp.swp  StereoXML.cpp  armorfind.cpp  armorpredict.cpp  imageProcess.cpp  main.cpp
training10.1/: .training.cpp.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  training  training.cpp
training10.8/: .main.cpp.swp  CMakeCache.txt  CMakeLists.txt  Header.h  Makefile  armorfind.cpp  armorfind.h  cmake_install.cmake  main.cpp  robo
week2_practice/: .test.cpp.swo  .test.cpp.swp  test  test.cpp  version  version.cpp
week3_practice/assignment2_redo/: CMakeLists.txt
week3_practice/assignment2_redo/include/: contour_filtering_function.h  image_processing_function.h
week3_practice/assignment2_redo/src/: contour_filtering_function.cpp  image_processing_function.cpp  main.cpp
week3_practice/cmake_with_dir/: CMakeLists.txt
week3_practice/cmake_with_dir/include/: add.h
week3_practice/cmake_with_dir/src/: main.cpp
week3_practice/cmake_with_opencv/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
week3_practice/cmake_with_opencv/include/: add.h
week3_practice/cmake_with_opencv/src/: add.cpp
week3_practice/cmake_with_opencv2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main
week3_practice/cmake_with_opencv3/: CMakeLists.txt
week3_practice/cmake_with_opencv3/src/: DisplayImage.cpp
week3_practice/cmake_without_dir/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp
